Fixed text spacing on mobile

--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -54,6 +54,10 @@
 
 /* Small screens */
 @media screen and (max-width: 700px) {
+  .text {
+    text-align: center;
+    margin: 1em;
+  }
   .name {
     font-size: 48px;
   }
